--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./main.js",
-    "test": "node ./test.js"
+    "test": "node ./test.js",
+    "configure": "node ./configure.js"
   },
   "keywords": [],
   "author": "",
