--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./main.js",
+    "local": "node ./local.js",
     "test": "jasmine",
     "configure": "node ./configure.js"
   },
