--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "configure": "node ./configure.js"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://adc.github.trendmicro.com/wilson-su/hearts-client.git"
+    "type": "git",
+    "url": "https://adc.github.trendmicro.com/wilson-su/hearts-client.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dateformat": "^3.0.3",
+    "glob": "^7.1.3",
     "prompt": "^1.0.0",
     "ps-grab": "^1.0.1",
     "ws": "^6.0.0"
